# sample-frictionless-insurance-advisor

./: .gitignore  README.md  app.py  architecture.drawio  cdk.json  deploy.sh  destroy.sh  pyproject.toml
agent/: Dockerfile  app.py  requirements.txt
cdk/: agentcore_oauth_provider.py  agentcore_runtime_custom.py  agentcore_stack.py  auth_stack.py  frontend_stack.py  tools_stack.py  voice_stack.py
lambda/catalog/: index.py
lambda/company/: index.py
lambda/comparator/: index.py
lambda/competitive/: index.py
lambda/competitors/: index.py
lambda/documents/: index.py
lambda/extract_policy/: index.py
lambda/mock_data/: catalog.json  index.py  policies.json  profiles.json
lambda/oauth_provider/: index.py
lambda/policies/: index.py
lambda/portfolio/: index.py
lambda/profile/: index.py
lambda/promotions/: index.py
lambda/recommend/: index.py
lambda/signup/: index.py
react-frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  run_app.sh  tsconfig.node.json  vite.config.ts
react-frontend/scripts/: setup-env.sh  sync-mock-policies.sh
react-frontend/src/: App.tsx  amplify-config.ts  index.css  main.tsx  types.ts  vite-env.d.ts
s3-data/company/: claims_process.md  company_overview.md  credentials_and_ratings.md  customer_service.md  digital_platform.md
s3-data/competitive/: advantages_by_product_line.md  bundle_benefits.md  health_life_comparison_faq.md  service_standards.md  value_propositions.md
scripts/: assert_runtime_header_config.py
voice-agent/: Dockerfile  app.py  requirements.txt
(+111 files in other folders)
