[project]
name = "gitlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-aws-bedrock-agentcore-alpha>=2.233.0a0",
    "aws-cdk-lib>=2.233.0",
    "boto3>=1.42.21",
    "cdk-nag>=2.37.55",
    "constructs>=10.4.4",
    "requests>=2.33.0",
    "urllib3>=2.7.0",
]
